--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
+    "@google-cloud/storage": "^7.0.1",
+    "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
